Mejora del cache y de los valores por defecto